<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">易驾366</string>
    <string name="Login">登录</string>
    <string name="menu_settings">设置</string>
    <string name="Signup">注册</string>
    <string name="insurance_suggestion">报价</string>
    <string name="save">保存</string>
    <string name="edit">设置</string>
    <string name="password">密码：</string>
    <string name="repassword">再输密码：</string>
    <string name="username">用户名：</string>
    <string name="name">姓名：</string>
    <string name="sign">签名：</string>
    <string name="app_loading_fail">装载失败</string>
    <string name="app_loading">正在装载...</string>
    <string name="app_uploading">正在上传...</string>
    <string name="key_01">最新消息</string>
    <string name="key_02">紧急救助</string>
    <string name="key_03">我的保险</string>
    <string name="key_04">保养建议</string>
    <string name="key_05">驾驶证</string>
    <string name="key_06">我的车辆</string>
    <string name="key_07">车船税</string>
    <string name="key_08">交强险</string>
    <string name="key_09">商业险</string>
    <string name="key_10">购买意外险</string>
    <string name="key_11">购买车险</string>
    <string name="key_12">车务服务</string>
    <string name="key_13">保险订单</string>
    <string name="key_14">我的订单</string>
    <string name="key_15">我的资料</string>
    <string name="exit_question">再按一次退出易驾366</string>
    <string name="current">当前保单</string>
    <string name="renew">新续保单</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="hint">提示</string>
    <string name="quit_question">请确认您要注销【%s】？</string>
    <string name="default_plate_no">鲁B</string>
    <string name="username_not_empty">用户名称不能为空</string>
    <string name="need_old_password">请输入原密码</string>
    <string name="password_not_empty">密码不能为空，至少6位</string>
    <string name="password_not_match">密码不匹配</string>
    <string name="name_is_empty">姓名不能为空！</string>
    <string name="id_is_wrong">身份证为18位,最后一位可以为X.</string>
    <string name="no_network">网络不给力，无法保存。</string>
    <string name="result_failed">没有发现条码</string>
    <string name="result_failed_why">"放弃扫描"</string>
    <string name="result_succeeded">发现用户优惠码</string>
    <string name="remember_password">记住密码</string>
    <string name="password_change_success">密码修改成功！</string>
    <string name="reset_password">重设密码</string>
    <string name="max_time_error">最长保养间隔应该为1-24个月，请正确输入。</string>
    <string name="bind">绑定手机</string>
    <string name="unbind">解除绑定</string>
    <string name="get_code">获取验证码</string>
    <string name="input_cellphone">请输入正确的手机号码</string>
    <string name="input_verify_code">请输入6位验证码</string>
    <string name="feedback">请输入您的反馈意见</string>
    <string name="comments">请输入您的评论</string>
    <string name="contact">联系方式：邮箱/QQ/手机号</string>
    <string name="has_activate_code">已经激活</string>
    <string name="has_no_activate_code">激活</string>
    <string name="input_activate_code">请输入激活码：</string>
    <string name="activate_code_example"></string>
    <string name="next">下一步</string>
    <string name="username_hint">手机号/车牌号</string>
    <string name="take_photo">拍照</string>
    <string name="pick_photo">照片库</string>
    <string name="choose_photo">请选择来源</string>
    <string name="photoPickerNotFoundText">没有找到摄像头！</string>
    <string name="sysError">未知错误！</string>
    <string name="buy">购买</string>
    <string name="placeholder">占位符123</string>
    <string name="placeholder2">占位符123456789\n123456789</string>
    <string name="star1">1星</string>
    <string name="star2">2星</string>
    <string name="star3">3星</string>
    <string name="star4">4星</string>
    <string name="star5">5星</string>
    <string name="right_arrow">></string>
    <string name="bound_button">做任务赚积分</string>
    <string name="button_weixin">微信</string>
    <string name="button_email">邮件</string>
    <string name="button_copy">复制</string>
    <string name="neworder_header">This is new order header</string>
    <string name="submit">提交</string>
    <string name="delete">删除</string>
    <string name="pay">付款</string>
    <string name="goods">商品</string>
    <string name="provider">服务商</string>
    <string name="article">百科</string>
    <string name="settings">用户</string>
    <string name="search">分类</string>
    <string name="agreement">查看详细介绍</string>
    <string name="remote_call_failed">Failure calling remote service</string>
    <string name="favor">收藏</string>
    <string name="share">分享</string>
    <string name="share_weixin">分享到微信</string>
    <string name="share_weixin_friends">分享到微信朋友圈</string>
    <string name="share_email">分享给朋友邮件</string>
    <string name="share_text">通过短信分享</string>
    <string name="share_weibo">分享到新浪微博</string>
    <string name="input_comment">请输入评论信息</string>
    <string name="setup_avatar">设置头像：</string>
    <string name="bounds">积分：</string>
    <string name="experience">经验</string>
    <string name="license">车牌号：</string>
    <string name="vin">VIN：</string>
    <string name="engine_no">发动机号：</string>
    <string name="init_date">初登日期：</string>
    <string name="owner">车主姓名：</string>
    <string name="identity">身份证号：</string>
    <string name="cellphone">手机号：</string>
    <string name="car_information">车辆基本信息：</string>
    <string name="buyer_information">被保险人信息：</string>
    <string name="title_activity_ping_an_yi_wai_xian">PingAnYiWaiXianActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>