<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        <RelativeLayout
        android:id="@+id/titile_layout_ry"
        android:layout_width="fill_parent"
        android:layout_height="43dip"
        android:background="@drawable/top_bar_bg" >

        <ImageView
            android:id="@+id/img_navigationbar_logo"
            android:layout_width="34dip"
            android:layout_height="34dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/ic_launcher"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/txt_navigation_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textSize="15sp" />

        <Button
            android:id="@+id/title_set_bn"
            style="@style/button"
            android:layout_width="59dip"
            android:layout_height="35dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dip"
            android:text="@string/edit"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/btn_phone"
            style="@style/button.green"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/app_loading" >
        </Button>
    </LinearLayout>

</LinearLayout>
