<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/navigation_bar" />

    <EditText
        android:id="@+id/edt_content"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
       	android:gravity="top"
       	android:singleLine="false"
       	 android:hint="@string/feedback"
        android:inputType="textNoSuggestions"
        android:minLines="4" />

    <TextView
        android:id="@+id/txt_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:textSize="12sp" >
    </TextView>

    <EditText
        android:id="@+id/edt_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:hint="@string/contact"
        android:inputType="textNoSuggestions" />

    <Button
        android:id="@+id/btn_ok"
        style="@style/button"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/ok" />
	<View android:layout_width="match_parent"
		    android:layout_height="20dp"></View>
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TableLayout
        android:id="@+id/table_items"
        style="@style/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:stretchColumns="*" >
        </TableLayout>
    </ScrollView>
</LinearLayout>