<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:background="@drawable/signup_hit_input0"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:text="@string/username" />

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dip"
            android:text="@string/username"
            android:textColor="@color/gray_light" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:background="@drawable/signup_hit_input0"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="7dip"
            android:text="@string/setup_avatar" />

        <ImageView
            android:id="@+id/img_avatar"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_marginRight="5dip"
            android:layout_toLeftOf="@+id/img_jiantou"
            android:contentDescription="@string/setup_avatar"
            android:src="@drawable/m" />

        <ImageView
            android:id="@+id/img_jiantou"
            android:layout_width="15dip"
            android:layout_height="15dip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dip"
            android:layout_marginTop="7dip"
            android:contentDescription="@string/setup_avatar"
            android:src="@drawable/jiantou" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/signup_hit_input1"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/edt_name"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:text="@string/name" />

        <EditText
            android:id="@id/edt_name"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dip"
            
            android:hint="姓名" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginBottom="10dip"
        android:background="@drawable/signup_hit_input6"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/edt_sign"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:text="@string/sign" />

        <EditText
            android:id="@id/edt_sign"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dip"
            android:hint="签名" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_bounds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:background="@drawable/signup_hit_input0"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:text="@string/bounds" />

        <TextView
            android:id="@+id/txt_bound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:layout_toLeftOf="@+id/img_jiantou2"
            android:text="@string/bounds"
            android:textColor="@color/gray_light" />

        <ImageView
            android:id="@+id/img_jiantou2"
            android:layout_width="15dip"
            android:layout_height="15dip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dip"
            android:layout_marginTop="2dip"
            android:contentDescription="@string/setup_avatar"
            android:src="@drawable/jiantou" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layout_experience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:background="@drawable/signup_hit_input0"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:text="@string/experience" />

        <TextView
            android:id="@+id/txt_experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:layout_toLeftOf="@+id/img_jiantou3"
            android:text="@string/experience"
            android:textColor="@color/gray_light" />

        <ImageView
            android:id="@+id/img_jiantou3"
            android:layout_width="15dip"
            android:layout_height="15dip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dip"
            android:layout_marginTop="2dip"
            android:contentDescription="@string/experience"
            android:src="@drawable/jiantou" />
    </RelativeLayout>

</LinearLayout>